--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -8,6 +8,9 @@
 
 *{
     font-family: "Nunito", serif;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 body{
     background-color:var(--bg-color);
@@ -53,9 +56,17 @@ h2{
     cursor: pointer;
 }
 
+.tab{
+    display: flex;
+    justify-content: space-between;
+    padding: 8px;
+}
+
+
 
 .tab.active{
     background-color: var(--bg-color);
+    font-weight: 500;
 }
 
 .btn{
@@ -130,6 +141,10 @@ input[type="checkbox"]{
     cursor: pointer;
 }
 
+.over-due{
+    color: #e23d20;
+}
+
 .check-box{
     display: flex;
     align-items: center;
@@ -140,6 +155,11 @@ input[type="checkbox"]{
     align-items: center;
     gap: 10px;
 }
+
+.actions{
+    display: flex;
+}
+
 /*
 .check-box{
   width: 1.5rem;
@@ -154,6 +174,16 @@ input[type="checkbox"]{
     background-color: black;
     color: white;
     box-shadow: 0px 4px 8px #dbdbdb;
+}
+
+.add-project-btn{
+    background-color: black;
+    color: white;
+}
+
+.btn.add-project-btn:hover{
+    background-color: #F4F4F4;
+    color: black;
 }
 
 .add-task-btn:hover{
@@ -172,16 +202,16 @@ input[type="checkbox"]{
     border-radius: 8px;
 }
 
-.low{
+.Low{
     color: #4CAF50;
 }
 
 
-.medium{
+.Medium{
     color: #FF8C00;
 }
 
-.high{
+.High{
     color: #FF6347;
 }
 
